# pipes-dsp

./: README.md  pipes-dsp.cabal
demo/: IIRDemo.hs
src/Control/Proxy/: DSP.hs
src/Pipes/: DSP.hs
src/Pipes/DSP/: FIRIIR.hs  ReferenceSignals.hs  Spectrogram.hs  Windowing.hs
test/: TestFIRIIR.hs
