Name:               pipes-dsp
Version:            0.1.0
License:            GPL-3
License-File:       LICENSE
Copyright:          (c) 2013 Greg Hale
Author:             Greg Hale
Maintainer:         imalsogreg@gmail.com
Stability:          Experimental
Homepage:           https://github.com/ImAlsoGreg/pipes-dsp
Bug-Reports:        https://github.com/ImAlsoGreg/pipes-dsp/issues
Category:           Pipes
Build-Type:         Simple
Synopsis:           Simple signal processing wrapped in pipes
Cabal-Version:      >=1.8
Extra-Source-Files: README.md
Description:
  Description to come.

Source-Repository head
  Type:     git
  Location: git://github.com/ImAlsoGreg/pipes-dsp.git

Flag Demo
  Description: Build demos
  
Library
  Hs-Source-Dirs: src
  Build-Depends:
    base     (>= 4 && <= 5)
    , pipes  (>= 4.0 && <= 4.1)
    , vector (>= 0.10 && < 0.11)
  Exposed-Modules:
    Pipes.DSP
  Other-Modules:
    Pipes.DSP.ReferenceSignals
    Pipes.DSP.FIRIIR
  Ghc-Options: -Wall -O2

Executable iirDemo
  If flag(Demo)
    Build-Depends: base
                  , pipes-dsp
                  , pipes    (>= 4.0 && < 4.1)
                  , Chart
                  , gloss    (>= 1.8 && < 1.9)
                  , transformers
                  , time
                  , vector (>= 0.10 && < 0.11)
    Other-Modules: TestFIRIIR
  Else
    Buildable: False
  GHC_Options: -Wall -O2 -rtsopts -fllvm
  Hs-Source-Dirs: demo, test
  Main-Is: IIRDemo.hs
